k8s/recipe-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: recipe-app
  template:
    metadata:
      labels:
        component: recipe-app
    spec:
      containers:
        - name: recipe-app
          image: alexvak/spring5-recipe-app
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 600Mi
              cpu: 120m
