k8s/recipe-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: recipe-mysql
  template:
    metadata:
      labels:
        component: recipe-mysql
    spec:
      volumes:
        - name: recipe-mysql-storage
          persistentVolumeClaim:
            claimName: recipe-app-persistent-valume-claim
      containers:
        - name: recipe-mysql
          image: alexvak/mysql-recipe-app
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: recipe-mysql-storage
              subPath: mysql
          resources:
            limits:
              memory: 512Mi
              cpu: 100m
