k8s/recipe-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: recipe-app
  ports:
    - port: 8080
      targetPort: 8080
