k8s/recipe-mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-mysql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: recipe-mysql
  ports:
    - port: 3306
      targetPort: 3306
